--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
