--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "movie_api",
   "version": "1.0.0",
   "description": "An API providing a database of films selected by Sophia B.",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "eslint": "^8.31.0"
+    "eslint": "^8.31.0",
+    "nodemon": "^2.0.20"
   }
 }
