changed file structure, trying to fix models

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "movie_api",
   "version": "1.0.0",
   "description": "An API providing a database of films selected by Sophia B.",
-  "main": "server.js",
+  "main": "js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
